== Affiliates - Changelog ==

= 4.13.0 =
* WordPress 6.0 compatible.

= 4.12.0 =
* WordPress 6.0 compatible.
* Requires at least WordPress 5.6.
* Fixed a PHP Notice with WordPress 6 and updated our add_menu_page to use an integer for the plugin's menu position.
* Removed uses of the deprecated wp_cache_reset() function.

= 4.11.0 =
* WordPress 5.9 compatible.
* Requires at least WordPress 5.5.

= 4.10.0 =
* WordPress 5.8 compatible.
* Added the affiliates_updated_affiliate_status_params filter.
* Added the affiliates_new_affiliate_registration_params filter.
* Added the affiliates_new_affiliate_user_registration_params filter.
* Fixed use of deprecated block_categories filter with WordPress 5.8+ using the block_categories_all filter instead.
* Removed a dropped integration entry from add-ons.
* Affiliate registration form now shows account is closed for deleted affiliates.
* Referrals admin section now also includes deleted accounts when inoperative option is used.
* Modified internal filter handling to allow support for coupon overrides.
* Fixed wrong referrals count shown under Visits & Referrals when filters set.

= 4.9.0 =
* WordPress 5.7 compatible.
* Fixed PHP 8.x deprecated required parameters after optional parameters.
* Updated pagination navigation elements on several screens to show as buttons for easier use.
* Updated the affiliate selection field to include Ids when creating or editing referrals.

= 4.8.0 =
* Requires at least WordPress 5.0.
* WordPress 5.6 compatible.
* Fixed profile fields were not showing translations with WPML except on registration form.
* Added notification messages to WPML translatable strings.
* Updated custom jQuery UI (used for datepickers), fixes no datepickers due to console error.

= 4.7.0 =
* WordPress 5.5 compatible.
* Removed use of the jQuery corner plugin (cosmetics do not belong in scripts and also fixes $.browser undefined issue).

= 4.6.0 =
* WordPress 5.4 compatible.